# port

./: .dockerignore  COMPARE.md  MARKET.md  Makefile  PLAN.md  README.md  docker-compose.override.yml  docker-compose.yml  modular_pwa_marketplace.md  package-lock.json  package.json  project_plan.md  tree.txt  user_friendly_deployment.md  vite.config.ts
.github/workflows/: build.yml  ci-cd.yml
backend/: server.js
backend/mcp/: client.js
config/: github-sources.json  permissions.json  security-policies.json
docker/: Dockerfile.embedded  Dockerfile.marketplace  Dockerfile.mcp-bridge  Dockerfile.resource-controller
docker/embedded/: Dockerfile
docker/marketplace/: Dockerfile
docker/nginx/: nginx.conf
docker/nginx/conf.d/: default.conf
docker/scripts/: start-marketplace.sh
modules/app-manager/: installer.js
modules/github-store/src/: github.rs
modules/mcp-bridge/: Dockerfile  package.json  server.js
modules/mcp-bridge/protocols/: filesystem.js  network.js  storage.js  system.js
modules/mcp-bridge/src/: client.rs
modules/resource-controller/: Dockerfile  package.json  permission-manager.js
modules/sandbox-runtime/: pwa-container.js
modules/sandbox-runtime/src/: runtime.rs
pwa-marketplace/: Makefile  README.md  package.json  tsconfig.json
pwa-marketplace/.github/workflows/: build.yml
pwa-marketplace/backend/mcp/: server.js
pwa-marketplace/config/: README.md  github-sources.json  mcp-config.json  permissions.json  security-policies.json  security.json  storage-config.json
pwa-marketplace/docker/: Dockerfile.marketplace  Dockerfile.mcp-bridge  Dockerfile.resource-controller  README.md  docker-compose.yml  nginx.conf
pwa-marketplace/docker/nginx/: nginx.conf
pwa-marketplace/docs/: README.md
pwa-marketplace/installers/: README.md
pwa-marketplace/k8s/: deployment.yaml  ingress.yaml  service.yaml
pwa-marketplace/modules/: README.md
pwa-marketplace/modules/app-manager/: installer.js
pwa-marketplace/modules/mcp-bridge/: client.js  server.js
pwa-marketplace/modules/resource-controller/: permission-manager.js
pwa-marketplace/modules/sandbox-runtime/: pwa-container.js
pwa-marketplace/scripts/: build.sh  deploy.sh  test.sh
pwa-marketplace/src/: README.md  app.tsx  index.html
pwa-marketplace/src-tauri/: Cargo.toml  README.md  tauri.conf.json
pwa-marketplace/src-tauri/src/: auto_updater.rs  folder_selector.rs  github_auth.rs  github_integration.rs  logger.rs  main.rs  mcp_bridge.rs  password_manager.rs
pwa-marketplace/src/components/: AppDetails.tsx  AppGrid.tsx  CategoryFilter.tsx  NotificationBadge.tsx  PasswordManager.tsx  SearchBar.tsx  SetupWizard.tsx  ThemeSwitcher.tsx  app-card.js  permission-dialog.js  styles.css
pwa-marketplace/src/marketplace/: index.html
pwa-marketplace/src/password-manager/: index.html
pwa-marketplace/src/settings/: index.html
pwa-marketplace/src/theme/: index.ts
pwa-marketplace/src/types/: index.ts
scripts/: build-all.sh  build.sh  deploy.sh  docker-setup.sh  package-installers.sh  release.sh
server/: index.js
server/routes/: api.js  health.js
src/: App.tsx  index.html  index.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auto_updater.rs  docker_manager.rs  folder_selector.rs  github_auth.rs  logger.rs  main.rs  password_manager.rs  system_tray.rs
src/components/: AppDetails.tsx  AppGrid.tsx  CategoryFilter.tsx  NotificationBadge.tsx  SearchBar.tsx  ThemeSwitcher.tsx  app-card.js  permission-dialog.js
src/marketplace/: index.html  package-lock.json  package.json  vite.config.ts
src/marketplace/src/: App.tsx  (+2 more)
src/password-manager/: index.html
src/settings/: index.html
(+5 files in other folders)
