[package]
name = "pwa-marketplace"
version = "0.1.0"
description = "A secure marketplace for Progressive Web Apps"
authors = ["PWA Marketplace Team"]
license = "MIT"
repository = "https://github.com/your-org/pwa-marketplace"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [
    "api-all",
    "system-tray",
    "updater",
    "dialog-open",
    "dialog-save",
    "shell-open",
    "notification-all",
    "global-shortcut-all",
    "clipboard-all"
] }
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls", 
    "sqlite", 
    "chrono", 
    "uuid"
] }

# Encryption and security
ring = "0.16"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
uuid = { version = "1.4", features = ["v4", "serde"] }

# System integration
keyring = "2.0"
dirs = "5.0"
notify = "6.0"

# Docker integration
bollard = "0.14"

# Logging
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# JSON Web Tokens for GitHub OAuth
jsonwebtoken = "9.0"

# HTTP client for GitHub API
oauth2 = "4.4"

# File system operations
walkdir = "2.3"
tempfile = "3.7"

# Compression for app downloads
flate2 = "1.0"
tar = "0.4"
zip = "0.6"

# Configuration management
config = "0.13"
toml = "0.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization formats
bincode = "1.3"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

# Development features
dev = []

# Production optimizations
release = [
    "tauri/custom-protocol"
]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
incremental = true
debug = true