[package]
name = "pwa-marketplace"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"

[dependencies]
tauri = { version = "1.3", features = ["shell-open", "shell-process", "dialog", "notification"] }
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = "1.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.47", features = ["Win32_Foundation", "Win32_System_Threading"] }

[target.'cfg(unix)'.dependencies]
notify = "4.0.21"

[package.metadata.tauri]

[package.metadata.tauri.bundle]
identifier = "com.pwa-marketplace"
icon = ["icons/icon.ico", "icons/icon.icns"]

[package.metadata.tauri.tauri]
embed-tauri-runtime = true

[package.metadata.tauri.tauri.conf]

[package.metadata.tauri.tauri.conf.window]
width = 1024
height = 768
center = true
title = "PWA Marketplace"
resizable = true
transparent = false
decorations = true

[package.metadata.tauri.tauri.conf.plugins]
shell = { all = true }

[package.metadata.tauri.tauri.conf.plugins.shell]
scope = "all"
